@@ -1,5 +1,6 @@
 Upcoming:
 - Avoid generating Lost Cities in biomes that are marked as 'void'
+- Avoid a crash with some blocks (beehives) causing out of bounds errors during chunk generation
 
 2.0.28-alpha:
 - Fixed a crash in Lost Cities loading existing worlds
